147 - sonar changes