@@ -27,7 +27,6 @@ import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -70,7 +69,7 @@ public class ProjectServiceImpl implements ProjectService {
         UserEntity user = userService.getUserById(userId);
         List<ProjectEntity> userProjects = user.getProjects().stream()
                 .peek(project -> project.setIsFavourite(projectRepository.isProjectFavourite(project.getId(), userId)))
-                .collect(Collectors.toList());
+                .toList();
         log.info("Received {} projects for user with id={}", userProjects.size(), userId);
         return userProjects;
     }
@@ -123,7 +122,7 @@ public class ProjectServiceImpl implements ProjectService {
                 columnService.getColumnListWithOrder(id, taskFilter)
                         .stream()
                         .map(ColumnWithTasksMapper.INSTANCE::columnToColumnWithTasksDto)
-                        .collect(Collectors.toList())
+                        .toList()
         );
     }
 
